--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,32 @@
 html {
-  font-size: 16px;
-  background-image: url('./images/christopher-burns-Kj2SaNHG-hg-unsplash.jpg');
-  background-color: rgba(200, 200, 200, 1);
+  font-size: 18px;
   color: #151515;
   font-weight: 600;
+  background-color: rgba(55, 55, 55, 0.2);
+}
+
+.demo-wrap {
+  overflow: hidden;
+  position: relative;
+}
+
+.demo-bg {
+  opacity: 0.8;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+.demo-content {
+  position: relative;
 }
 
 h1 {
   color: black;
+  font-size: 40px;
 }
 
 header {
@@ -26,6 +45,8 @@ strong {
   align-items: center;
   margin: 50px 90px;
   padding: 60px;
+  background-color: lightsalmon;
+  opacity: 0.9;
 }
 
 .presentation h2 {
@@ -40,4 +61,16 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.time {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #151515;
+  border-radius: 8px;
+  padding: 20px;
+  padding-bottom: 40px;
+  background-color: rgba(34, 233, 90, 0.4);
 }
